# sleeve

./: .gitignore  Cargo.toml  README.md  ldd_deploy.sh
assets/: icons.gresource.xml  style.css
assets/icons/: sleeve.icns
assets/lang/: en.json  zh-CN.json
docs/superpowers/specs/: 2026-07-18-audio-tag-cover-editor-design.md  2026-07-19-album-directory-detection-design.md
scripts/: bundle-appimage.sh  bundle-macos.sh  bundle-msys2.sh  check_i18n.py
src/: app.rs  i18n.rs  main.rs
src/app/: cover.rs  dialogs.rs  form.rs  history.rs  inspector.rs  macos.rs
src/models/: audio_file.rs  backup.rs  file_tree.rs  mod.rs  tag_draft.rs
src/services/: backup.rs  directory_scan.rs  mod.rs  tag_reader.rs  tag_writer.rs
src/ui/: cover_panel.rs  file_tree.rs  mod.rs  tag_editor.rs  tree_row.rs
