[package]
name = "sleeve"
version = "0.1.0"
edition = "2024"

[dependencies]
audiotags = "0.5.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gdk-pixbuf = "0.22"
glib = "0.22"
image = "0.25.10"
libadwaita = "0.9.2"
relm4 = { version = "0.11.0", features = ["libadwaita"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "isomp4", "aac", "alac", "pcm", "vorbis", "ogg"] }

[target.'cfg(target_os = "macos")'.dependencies]
gdk4-macos = "0.11.0"
objc2-app-kit = "0.3.2"
