[package]
name = "sleeve"
version = "0.2.0"
edition = "2024"

[dependencies]
audiotags = "0.5.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gdk-pixbuf = "0.22"
glib = "0.22"
image = "0.25.10"
libadwaita = { version = "0.9.2", features = ["v1_7"] }
libblur = "0.24.0"
relm4 = { version = "0.11.0", features = ["libadwaita"] }
serde_json = "1.0"
symphonia = { version = "0.5", features = ["mp3", "flac", "isomp4", "aac", "alac", "pcm", "vorbis", "ogg"] }

[build-dependencies]
glib-build-tools = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
gdk4-macos = "0.11.0"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSEvent", "NSWindow"] }
